--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <nav class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="#">Сотер</a></h1>
+          <h1><a href="pages#index">Сотер</a></h1>
         </li>
          <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -31,8 +31,8 @@
 
         <!-- Left Nav Section -->
         <ul class="left">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Наша продукция</a></li>
+          <li><a href="pages#index">Главная</a></li>
+          <li><a href="products#index">Наша продукция</a></li>
         </ul>
       </section>
     </nav>
@@ -40,7 +40,7 @@
     <!-- Body -->
     <div class="row">
       <div class="small-2 large-3 columns"></div>
-      <div class="small-4 large-6 columns">
+      <div class="small-4 small-centered large-6 columns">
         <%= yield %>
       </div>
       <div class="small-6 large-3 columns"></div>
