--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,22 @@
  *= require foundation_and_overrides
 
  */
+
+.alert {
+  color: red;
+}
+.notice {
+  color: green;
+}
+
+.center {
+  text-align: center
+}
+
+.right {
+  text-align: right
+}
+
+.left {
+  text-align: left
+}
