--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,15 +1,15 @@
-<h2>Resend confirmation instructions</h2>
+<h2 class="center">Выслать инструкцию подтверждения регистрации повторно</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Выслать инструкцию для подтверждения повторно" %>
+  <div class="actions center">
+    <%= f.submit "Выслать", class: 'button' %>
   </div>
 <% end %>
 
