--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,15 @@
-<h2>Забыли пароль?</h2>
+<h2 class="center">Забыли пароль?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Выслать инструкцию для смены пароля" %>
+  <div class="actions center">
+    <%= f.submit "Выслать инструкцию для смены пароля", class: 'button' %>
   </div>
 <% end %>
 
