--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,27 @@
-<h2>Регистрация</h2>
+<h2 class="center">Регистрация</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email, class: 'label' %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label 'Пароль', class: 'label' %>
+    <%= f.label 'Пароль' %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> символов минимум)</em>
-    <% end %><br />
+    <% end %>
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label 'Подтверждение пароля', class: 'label' %><br />
+    <%= f.label 'Подтверждение пароля' %>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
+  <div class="actions center">
     <%= f.submit "Зарегистрироваться", class: 'button round' %>
   </div>
 <% end %>
