--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,15 +1,15 @@
-<h2>Выслать инструкцию для разблокировки учетной записи повторно</h2>
+<h2 class="center">Выслать инструкцию для разблокировки учетной записи повторно</h2>
 
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Послать инструкцию" %>
+  <div class="actions center">
+    <%= f.submit "Выслать", class: 'button' %>
   </div>
 <% end %>
 
