--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,14 +28,14 @@
           <% if user_signed_in? %>
             <li><%= link_to "Выйти", "/users/sign_out", method: :delete %></li>
           <% else %>
-            <li><%= link_to "Войти", "/users/sign_in", method: :post %></li>
+            <li><%= link_to "Войти", new_user_session_path, method: :get %></li>
           <% end %>
         </ul>
 
         <!-- Left Nav Section -->
         <ul class="left">
           <li class="active"><a href=<%= pages_path %>>Главная</a></li>
-          <li><%= link_to "Наша продукция", products_path, remote: true %></li>
+          <li><%= link_to "Наша продукция", products_path %></li>
           <li><a href=<%= contacts_pages_path %>>Контакты</a></li>
         </ul>
       </section>
@@ -45,8 +45,19 @@
     <div class="row">
       <div class="small-2 large-3 columns"></div>
       <div class="small-4 small-centered large-6 columns">
-        <p class="notice"><%= notice %></p>
+        <% if notice %>
+          <div data-alert class="alert-box success">
+            <%= notice %>
+            <a href="#" class="close">&times;</a>
+          </div>
+        <% end %>
         <p class="alert"><%= alert %></p>
+        <% if flash[:recaptcha_error] %>
+          <div data-alert class="alert-box alert">
+            <%= flash[:recaptcha_error] %>
+            <a href="#" class="close">&times;</a>
+          </div>
+        <% end %>
         <div class="soter-body"><%= yield %></div>
       </div>
       <div class="small-6 large-3 columns"></div>
