--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
         <!-- Left Nav Section -->
         <ul class="left">
           <li class="active"><a href=<%= pages_path %>>Главная</a></li>
-          <li><%= link_to "Наша продукция", products_path, remote: true %></li>
+          <li><%= link_to "Наша продукция", products_path %></li>
           <li><a href=<%= contacts_pages_path %>>Контакты</a></li>
         </ul>
       </section>
