--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -9,5 +9,5 @@
       = f.label 'Кол-во'
       = f.text_field :kolvo
       .links
-        = link_to_add_association 'add attachment', f, :attachments
+        = link_to_add_association 'Добавить фото', f, :attachments
     = f.submit "Сохранить"
