--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,8 +1,8 @@
-div class = "product-#{product.id}"
-  tr
-    td = product.group.name
-    td = product.name
-    td = product.kolvo
-    td = link_to 'редак.', edit_product_path(product)
-    - if !product.attachments.empty?
-      td = link_to 'фото', pictures_product_path(product), class: 'button tiny round'
+    tr [class = "product-#{product.id}"]
+      td = product.group.name
+      td = product.name
+      td = product.kolvo
+      td = link_to 'редак.', edit_product_path(product)
+      td = link_to 'удалить', product_path(product), method: :delete, remote: true
+      - if !product.attachments.empty?
+        td = link_to 'фото', pictures_product_path(product), class: 'button tiny round'
