--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,8 +1,9 @@
     tr [class = "product-#{product.id}"]
       td = product.group.name
+      td = product.art
       td = product.name
       td = product.kolvo
       td = link_to 'редак.', edit_product_path(product)
-      td = link_to 'удалить', product_path(product), method: :delete, remote: true
+      td = link_to 'удалить', product_path(product), method: :delete, remote: true, data: {confirm: 'Удалить продукт ?'}
       - if !product.attachments.empty?
-        td = link_to 'фото', pictures_product_path(product), class: 'button tiny round'
+        td = link_to 'фото', pictures_product_path(product), class: 'button tiny info round'
