--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -2,8 +2,9 @@
   table
     tr
       th Группа
+      th Артикул
       th Наименование
       th Кол-во
     - @products.each do |product|
       = render product
-= link_to 'Новый продукт', new_product_path
+= link_to 'Добавить продукт', new_product_path, class: 'button expand'
