--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -1,13 +1,1 @@
-  = form_for @product do |f|
-    p
-      = f.label 'Наименование'
-      = f.text_field :name
-    p
-      = f.label 'Группа'
-      = select :product, :group_id, Group.all.collect {|p| [ p.name, p.id ] }, { include_blank: true }
-    p
-      = f.label 'Кол-во'
-      = f.text_field :kolvo
-      .links
-        = link_to_add_association 'Добавить фото', f, :attachments
-    = f.submit "Сохранить"
+= render 'products/product_form'
