--- a/app/views/products/edit.html.slim
+++ b/app/views/products/edit.html.slim
@@ -1,1 +1,3 @@
-= render 'products/product_form'
+- if policy(@product).edit?
+	= render 'products/product_form'
+=link_to "Назад", "javascript:history.back()"
