--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -4,8 +4,12 @@
       td = product.name
       td = product.kolvo
       - if policy(product).edit?
-        td = link_to 'редак.', edit_product_path(product)
+        td = link_to edit_product_path(product)
+          <i class="fi-clipboard-pencil" title="Редактировать"></i>
       - if policy(product).destroy?
-        td = link_to 'удалить', product_path(product), method: :delete, remote: true, data: {confirm: 'Удалить продукт ?'}
+        td = link_to product_path(product), method: :delete, remote: true, data: {confirm: 'Удалить продукт ?'}
+          <i class="fi-trash" title="Удалить"></i>
       - if !product.attachments.empty?
-        td = link_to 'фото', pictures_product_path(product), class: 'button tiny info round'
+        td = link_to pictures_product_path(product)
+          <i class="fi-photo" title="Фото"></i>
+
